remove fixed height to fix text overflow issue

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -39,12 +39,14 @@ li .cardimg {
 
 li.cardsingle{
 	/*clear:both; */
-	height:11em; 
+	/*height:11em; */
 	box-sizing: border-box;
 	padding: 0.25em 0.5em 0 0.5em;
 	margin-bottom: 0.5em; 
 	border: 5px solid #BBBBBB;
 	/*margin-right:1em;*/
+	/*display:block;*/
+	/*overflow:auto;*/
 }
 
 li.cardsinglegrid{
@@ -58,6 +60,7 @@ li.cardsinglegrid{
 	border: 5px solid #BBBBBB;
 	/*margin-right:1em;*/
 	position: relative;
+
 }
 
 li.cardsinglegrid p{
